refatorado codigo da aplicacao